// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should not render filler exchange cards 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="sm:px-6 lg:px- px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            >
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold active"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-dark text-sm font-bold"
              >
                0
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxhUy dSLmHc border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    />
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                  >
                    <img
                      alt="Profile avatar"
                      class="w-11 h-11 rounded-full"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    />
                    <span
                      class="sc-AxiKw eGdvNF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj col-span-2 border-theme-primary-contrast"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                      >
                        <div
                          class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="text-center"
          >
            <svg
              class="mx-auto"
            >
              exchange-cards-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-neutral-dark"
            >
              Select one of the exchanges you have installed
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should open & close add exchange modal 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="sm:px-6 lg:px- px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            >
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold active"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-dark text-sm font-bold"
              >
                0
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxhUy dSLmHc border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    />
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                  >
                    <img
                      alt="Profile avatar"
                      class="w-11 h-11 rounded-full"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    />
                    <span
                      class="sc-AxiKw eGdvNF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj col-span-2 border-theme-primary-contrast"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                      >
                        <div
                          class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="text-center"
          >
            <svg
              class="mx-auto"
            >
              exchange-cards-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-neutral-dark"
            >
              Select one of the exchanges you have installed
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should open & close add exchange modal when no existing exchanges 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="sm:px-6 lg:px- px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            >
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold active"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-dark text-sm font-bold"
              >
                0
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxhUy dSLmHc border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    />
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                  >
                    <img
                      alt="Profile avatar"
                      class="w-11 h-11 rounded-full"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    />
                    <span
                      class="sc-AxiKw eGdvNF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8 grid grid-cols-8"
          >
            <div
              class="flex flex-col h-32 mr-5 border-2 rounded-lg border-theme-primary-contrast col-span-6"
            >
              <div
                class="flex flex-col m-auto text-center"
              >
                <span
                  class="font-semibold"
                >
                  Your Exchange List
                </span>
                <span
                  class="m-auto text-sm text-theme-neutral"
                >
                  You don't have an Exchange yet
                </span>
              </div>
            </div>
            <div
              class="sc-fzoXzr dakYMj col-span-2 border-theme-primary-contrast"
              data-testid="Exchange__add-exchange-card"
            >
              <div
                class="flex items-center px-12 my-auto font-semibold text-theme-primary"
              >
                <div
                  class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                Add Exchange
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <svg
            class="mx-auto"
          >
            no-exchanges-banner.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="sm:px-6 lg:px- px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            >
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold active"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-dark text-sm font-bold"
              >
                0
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxhUy dSLmHc border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    />
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                  >
                    <img
                      alt="Profile avatar"
                      class="w-11 h-11 rounded-full"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    />
                    <span
                      class="sc-AxiKw eGdvNF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8 grid grid-cols-8"
          >
            <div
              class="flex flex-col h-32 mr-5 border-2 rounded-lg border-theme-primary-contrast col-span-6"
            >
              <div
                class="flex flex-col m-auto text-center"
              >
                <span
                  class="font-semibold"
                >
                  Your Exchange List
                </span>
                <span
                  class="m-auto text-sm text-theme-neutral"
                >
                  You don't have an Exchange yet
                </span>
              </div>
            </div>
            <div
              class="sc-fzoXzr dakYMj col-span-2 border-theme-primary-contrast"
              data-testid="Exchange__add-exchange-card"
            >
              <div
                class="flex items-center px-12 my-auto font-semibold text-theme-primary"
              >
                <div
                  class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                Add Exchange
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <svg
            class="mx-auto"
          >
            no-exchanges-banner.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render with exchanges 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="sm:px-6 lg:px- px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            >
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold active"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-dark text-sm font-bold"
              >
                0
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxhUy dSLmHc border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    />
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                  >
                    <img
                      alt="Profile avatar"
                      class="w-11 h-11 rounded-full"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    />
                    <span
                      class="sc-AxiKw eGdvNF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-okex"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            OKEx
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj col-span-2 border-theme-primary-contrast"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                      >
                        <div
                          class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast"
                      data-testid="Exchange__blank-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-contrast"
                      >
                        <div
                          class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
                        />
                        Exchange Name
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast"
                      data-testid="Exchange__blank-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-contrast"
                      >
                        <div
                          class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
                        />
                        Exchange Name
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast"
                      data-testid="Exchange__blank-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary-contrast"
                      >
                        <div
                          class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
                        />
                        Exchange Name
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="text-center"
          >
            <svg
              class="mx-auto"
            >
              exchange-cards-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-neutral-dark"
            >
              Select one of the exchanges you have installed
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should select exchange 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="sm:px-6 lg:px- px-4"
      >
        <div
          class="md:h-24 relative flex justify-between h-20"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="bg-logo flex p-2 mr-4 rounded-lg"
            >
              <img
                alt="ARK Logo"
                class="md:h-8 lg:h-10 h-6"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="md:h-24 flex h-20"
            >
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold active"
                  href="/profiles/bob/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                  href="/profiles/bob/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/bob/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="border-theme-neutral-200 h-8 border-r"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-theme-neutral text-xs"
              >
                Your balance
              </div>
              <div
                class="text-theme-neutral-dark text-sm font-bold"
              >
                0
              </div>
            </div>
            <div
              class="cusror-pointer flex p-1"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxhUy dSLmHc border-theme-neutral-300 -mr-1"
                  >
                    <span
                      class="text-theme-neutral-600"
                    />
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                  >
                    <img
                      alt="Profile avatar"
                      class="w-11 h-11 rounded-full"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    />
                    <span
                      class="sc-AxiKw eGdvNF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Trade your money safely from the comfort of your wallet.
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="relative"
            >
              <div
                class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
              />
              <div
                class="swiper-container swiper-container-initialized swiper-container-horizontal"
                style="height: 155px;"
              >
                <div
                  class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                  style="transition: 0ms; transform: translate3d(NaNpx, 0px, 0px);"
                >
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj bg-theme-success-contrast border-theme-success-300 hover:border-theme-success-contrast"
                      data-testid="Exchange__exchange-card-changenow-plugin"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            ChangeNOW Plugin
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-binance"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Binance
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj border-theme-primary-contrast hover:border-theme-background"
                      data-testid="Exchange__exchange-card-atomars"
                    >
                      <div
                        class="px-12 my-auto font-semibold"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="absolute top-4 right-2 text-theme-primary-light"
                          >
                            <div
                              class="relative"
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="float-right outline-none cursor-pointer focus:outline-none"
                              >
                                <div
                                  class="sc-AxirZ eEbZjj"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="mr-4"
                          >
                            <svg
                              class="w-12 h-12"
                            >
                              changenow-logo.svg
                            </svg>
                          </div>
                          <div
                            class="truncate"
                          >
                            Atomars
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="swiper-slide"
                    style="height: 155px;"
                  >
                    <div
                      class="sc-fzoXzr dakYMj col-span-2 border-theme-primary-contrast"
                      data-testid="Exchange__add-exchange-card"
                    >
                      <div
                        class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                      >
                        <div
                          class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            plus.svg
                          </svg>
                        </div>
                        Add Exchange
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="text-center"
          >
            <svg
              class="mx-auto"
            >
              exchange-cards-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-neutral-dark"
            >
              Select one of the exchanges you have installed
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
